--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@greatsumini/react-facebook-login": "^3.4.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@paypal/react-paypal-js": "^8.8.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.0",
