--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@stripe/react-stripe-js": "^3.3.0",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
+    "mammoth": "^1.9.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "pdf-parse": "^1.1.1",
+    "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
@@ -35,12 +40,15 @@
     "slick-carousel": "^1.8.1",
     "suneditor-react": "^3.6.1",
     "sweetalert": "^2.1.2",
-    "taos": "^1.0.5"
+    "sweetalert2": "^11.17.2",
+    "taos": "^1.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19.0.10",
     "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^19.0.4",
