--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
     "dotenv": "^16.4.7",
+    "embla-carousel-auto-scroll": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
     "mammoth": "^1.9.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
