--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.487.0",
     "mammoth": "^1.9.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
