remove unused packages

--- a/package.json
+++ b/package.json
@@ -11,53 +11,37 @@
   "dependencies": {
     "@greatsumini/react-facebook-login": "^3.4.0",
     "@hello-pangea/dnd": "^18.0.1",
-    "@paypal/react-paypal-js": "^8.8.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.6.0",
-    "@stripe/react-stripe-js": "^3.3.0",
     "axios": "^1.7.9",
-    "buffer": "^6.0.3",
-    "dotenv": "^16.4.7",
     "embla-carousel-auto-scroll": "^8.5.2",
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.487.0",
-    "mammoth": "^1.9.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-auth": "^4.24.11",
-    "pdf-parse": "^1.1.1",
-    "pdf2json": "^3.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-filepond": "^7.1.3",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
-    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
-    "react-slick": "^0.30.3",
-    "react-typed": "^2.0.12",
-    "slick-carousel": "^1.8.1",
     "suneditor-react": "^3.6.1",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.17.2",
-    "taos": "^1.0.5",
+    "sweetalert2": "^11.6.13",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19.0.10",
     "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^19.0.4",
     "@types/react-google-recaptcha": "^2.1.9",
-    "@types/react-slick": "^0.23.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
